--- a/templates/nav/nav-bdsp.html
+++ b/templates/nav/nav-bdsp.html
@@ -7,7 +7,10 @@
             <a href="/underground">Underground</a>
         </li>
         <li>
-            <a href="/bdspstationary">S</a>
+            <a href="/bdspstationary">Stationary</a>
+        </li>
+		<li>
+            <a href="/cram">SWSH</a>
         </li>
         <li>
             <a href="https://github.com/capitalism-sudo/pla-multi-checker/wiki" target="_blank">Wiki</a>
