added bdsp egg checking fully, cleaned up pages

--- a/templates/nav/nav-bdsp.html
+++ b/templates/nav/nav-bdsp.html
@@ -10,6 +10,15 @@
             <a href="/bdspstationary">Stationary</a>
         </li>
 		<li>
+            <a href="/bdspwild">Wild</a>
+        </li>
+		<li>
+            <a href="/bdsproamer">Roamers</a>
+        </li>
+		<li>
+            <a href="/bdspegg">Eggs</a>
+        </li>
+		<li>
             <a href="/cram">SWSH</a>
         </li>
         <li>
