--- a/templates/pages/b_egg.html
+++ b/templates/pages/b_egg.html
@@ -1,6 +1,6 @@
 {% extends "base/base-sidebar.html" %}
 
-{% block title %}Roamer Checker{% endblock %}
+{% block title %}Egg Checker{% endblock %}
 
 {% block head %}
 	<script type="module" src="static/js/jquery.min.mjs"></script>
@@ -19,6 +19,14 @@
 
 {% block sidebar %}
     <section class="pla-section-options">
+	
+		<div class="tab">
+			<button class="tablinks" id="defaultOpen" data-pla-tab-for="States">RNG Info</button>
+			<button class="tablinks" data-pla-tab-for="Parents">Parent Info</button>
+		</div>
+		
+		<div id="States" class="tabcontent">
+		
 		<div class="pla-control">
             <label for="inputs0">S0</label>
             <input id="inputs0" placeholder="Input S[0]">
@@ -54,15 +62,32 @@
             <input type="number" id="delay" placeholder="Delay">
         </div>
 		
+		
 		<div class="pla-control-spaced">
-			<label for="3iv">3IV Guaranteed?</label>
-			<input type="checkbox" id="3iv">
+			<label for="masuda">Masuda Method?</label>
+			<input type="checkbox" id="masuda">
 		</div>
 		
 		<div class="pla-control-spaced">
-			<label for="fixedgender">Fixed Gender?</label>
-			<input type="checkbox" id="fixedgender">
+			<label for="shinycharm">Shiny Charm?</label>
+			<input type="checkbox" id="shinycharm">
 		</div>
+		
+		<div class="pla-control-spaced">
+			<label for="ovalcharm">Oval Charm?</label>
+			<input type="checkbox" id="ovalcharm">
+		</div>
+		
+		<div class="pla-control">
+            <label for="tid">TID:</label>
+            <input type="number" id="tid" placeholder="tid">
+        </div>
+		
+		<div class="pla-control">
+            <label for="sid">SID:</label>
+            <input type="number" id="sid" placeholder="sid">
+        </div>
+		
 		
 		<button type="button" class="pla-button expandable-control">Advanced Options</button>
 			<div class="expandable">
@@ -78,6 +103,134 @@
 			</div>
 			
 			</div>
+			
+			</div>
+			
+			<div id="Parents" class="tabcontent">
+			
+			<div class="pla-control">
+				<label for="compat">Compatibility:</label>
+				<select id="compat">
+					<option value="20">The two don't seem to like each other</option>
+					<option value="50">The two seem to get along</option>
+					<option value="70">The two seem to get along very well</option>
+				</select>
+			</div>
+			
+			<label>Male Parent IVs:</label>
+			<div class="pla-control-spaced">
+				<input type="number" id="a_hp" placeholder="HP" size="2" min="0" max="31"> <input type="number" id="a_atk" placeholder="ATK" size="2" min="0" max="31"> <input type="number" id="a_def" placeholder="DEF" size="2" min="0" max="31"><input type="number" id="a_spa" placeholder="SpA" size="2" min="0" max="31"> <input type="number" id="a_spd" placeholder="SpD" size="2" min="0" max="31"> <input type="number" id="a_spe" placeholder="Spe" size="2" min="0" max="31">
+			</div>
+			
+			<div class="pla-control">
+			<label for="a_nature">Nature: </label>
+			<select id="a_nature">
+				<option value="hardy">Hardy</option>
+				<option value="lonely">Lonely</option>
+				<option value="brave">Brave</option>
+				<option value="adamant">Adamant</option>
+				<option value="naughty">Naughty</option>
+				<option value="bold">Bold</option>
+				<option value="docile">Docile</option>
+				<option value="relaxed">Relaxed</option>
+				<option value="impish">Impish</option>
+				<option value="lax">Lax</option>
+				<option value="timid">Timid</option>
+				<option value="hasty">Hasty</option>
+				<option value="serious">Serious</option>
+				<option value="jolly">Jolly</option>
+				<option value="naive">Naive</option>
+				<option value="modest">Modest</option>
+				<option value="mild">Mild</option>
+				<option value="quiet">Quiet</option>
+				<option value="bashful">Bashful</option>
+				<option value="rash">Rash</option>
+				<option value="calm">Calm</option>
+				<option value="gentle">Gentle</option>
+				<option value="sassy">Sassy</option>
+				<option value="careful">Careful</option>
+				<option value="quirky">Quirky</option>
+			</select>
+			</div>
+			
+			<div class="pla-control-spaced">
+			<label for="a_ditto">Ditto?</label>
+			<input type="checkbox" id="a_ditto">
+			</div>
+			
+			<div class="pla-control">
+			<label for="a_item">Parent Item:</label>
+			<select id="a_item">
+				<option value="0">No Item</option>
+				<option value="1">Everstone</option>
+				<option value="8">Destiny Knot</option>
+			</select>
+			</div>
+			<p><p>
+			<label>Female Parent IVs:</label>
+			<div class="pla-control-spaced">
+				<input type="number" id="b_hp" placeholder="HP" size="2" min="0" max="31"> <input type="number" id="b_atk" placeholder="ATK" size="2" min="0" max="31"> <input type="number" id="b_def" placeholder="DEF" size="2" min="0" max="31"><input type="number" id="b_spa" placeholder="SpA" size="2" min="0" max="31"> <input type="number" id="b_spd" placeholder="SpD" size="2" min="0" max="31"> <input type="number" id="b_spe" placeholder="Spe" size="2" min="0" max="31">
+			</div>
+			
+			<div class="pla-control">
+			<label for="b_nature">Nature: </label>
+			<select id="b_nature">
+				<option value="hardy">Hardy</option>
+				<option value="lonely">Lonely</option>
+				<option value="brave">Brave</option>
+				<option value="adamant">Adamant</option>
+				<option value="naughty">Naughty</option>
+				<option value="bold">Bold</option>
+				<option value="docile">Docile</option>
+				<option value="relaxed">Relaxed</option>
+				<option value="impish">Impish</option>
+				<option value="lax">Lax</option>
+				<option value="timid">Timid</option>
+				<option value="hasty">Hasty</option>
+				<option value="serious">Serious</option>
+				<option value="jolly">Jolly</option>
+				<option value="naive">Naive</option>
+				<option value="modest">Modest</option>
+				<option value="mild">Mild</option>
+				<option value="quiet">Quiet</option>
+				<option value="bashful">Bashful</option>
+				<option value="rash">Rash</option>
+				<option value="calm">Calm</option>
+				<option value="gentle">Gentle</option>
+				<option value="sassy">Sassy</option>
+				<option value="careful">Careful</option>
+				<option value="quirky">Quirky</option>
+			</select>
+			</div>
+			
+			<div class="pla-control-spaced">
+			<label for="b_ditto">Ditto?</label>
+			<input type="checkbox" id="b_ditto">
+			</div>
+			
+			<div class="pla-control">
+			<label for="b_item">Parent Item:</label>
+			<select id="b_item">
+				<option value="0">No Item</option>
+				<option value="1">Everstone</option>
+				<option value="8">Destiny Knot</option>
+			</select>
+			</div>
+			
+			<div class="pla-control">
+			<label for="genderratio">Gender Ratio:</label>
+			<select id="genderratio">
+				<option value="31">1 &#9792; : 7 &#9794;</option>
+				<option value="63">1 &#9792; : 4 &#9794;</option>
+				<option value="127">1 &#9792; : 1 &#9794;</option>
+				<option value="191">3 &#9792; : 1 &#9794;</option>
+				<option value="0"> &#9794; Only</option>
+				<option value="254"> &#9792; Only</option>
+				<option value="255"> Genderless</option>
+			</select>
+		</div>
+		
+			</div>
 		
 		<div class="pla-control">
 			<label for="selectfilter">Select Filter:</label>
@@ -87,9 +240,10 @@
 				<option value="is_square">Square Shiny Only</option>
 			</select>
 		</div>
+		
         
         <div class="pla-control-actions">
-            <button class="pla-button pla-button-action" id="pla-button-checkroam">Check Stationary</button>
+            <button class="pla-button pla-button-action" id="pla-button-checkegg">Check Egg</button>
         </div>
     </section>
 
@@ -142,18 +296,6 @@
 			</select>
 		</div>
 		
-		<div class="pla-control">
-			<label for="genderratio">Gender Ratio</label>
-			<select id="genderratio">
-				<option value="31">1 &#9792; : 7 &#9794;</option>
-				<option value="63">1 &#9792; : 4 &#9794;</option>
-				<option value="127">1 &#9792; : 1 &#9794;</option>
-				<option value="191">3 &#9792; : 1 &#9794;</option>
-				<option value="0"> &#9794; Only</option>
-				<option value="254"> &#9792; Only</option>
-			</select>
-		</div>
-		
     </section>
 {% endblock %}
 
@@ -174,6 +316,9 @@
                 <li><span class="pla-results-label">Nature:</span> <span data-pla-results-nature></span></li>
                 <li><span class="pla-results-label">Gender:</span> <span data-pla-results-gender></span></li>			
                 <li><span class="pla-results-label">Ability:</span> <span data-pla-results-ability></span></li>
+			</ul>
+			<ul class="pla-results-ul">
+				<li><span class="pla-results-label">Egg Seed:</span> <span data-pla-results-eseed></span></li>
                 <li><span class="pla-results-label">PID:</span> <span data-pla-results-pid></span></li>
 				<li><span class="pla-results-label">EC:</span> <span data-pla-results-ec></span></li>
             </ul>
@@ -194,5 +339,5 @@
 {% endblock %}
 
 {% block script %}
-    <script type="module" src="{{ url_for('static', filename='js/broamer.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/begg.js') }}"></script>
 {% endblock %}
