--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+	<link href="{{ url_for('static', filename='css/chosen.css') }}" rel="stylesheet">
     {% block head %}
     {% endblock %}
     <script type="module">
