added chosen style selectors to wild, stationary, roamer and egg. Added CTRL+CLICK to set IV box to 31 and Shift+CLICK to set IV box to 0 for eggs.

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -11,6 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
 	<link href="{{ url_for('static', filename='css/chosen.css') }}" rel="stylesheet">
+	<script type="module" src="static/js/jquery.min.mjs"></script>
+	<script type="module">
+	</script>
+	<script type="module" src="static/js/chosen.jquery.min.mjs"></script>
+	<script type="module">
+	</script>
     {% block head %}
     {% endblock %}
     <script type="module">
