--- a/templates/pages/b_roamer.html
+++ b/templates/pages/b_roamer.html
@@ -112,7 +112,7 @@
         
         <div class="pla-control">
 			<label for="naturefilter">Filter Results: Nature:</label>
-			<select id="naturefilter">
+			<select id="naturefilter" multiple class="chosen-select">
 				<option value="any">Any</option>
 				<option value="hardy">Hardy</option>
 				<option value="lonely">Lonely</option>
