--- a/templates/pages/b_wild.html
+++ b/templates/pages/b_wild.html
@@ -66,12 +66,12 @@
 			
 			<label>Min IVs:</label>
 			<div class="pla-control-spaced">
-				<input type="number" id="minhp" placeholder="HP" size="2" min="0" max="31"> <input type="number" id="minatk" placeholder="ATK" size="2" min="0" max="31"> <input type="number" id="mindef" placeholder="DEF" size="2" min="0" max="31"><input type="number" id="minspa" placeholder="SpA" size="2" min="0" max="31"> <input type="number" id="minspd" placeholder="SpD" size="2" min="0" max="31"> <input type="number" id="minspe" placeholder="Spe" size="2" min="0" max="31">
+				<input type="number" id="minhp" placeholder="HP" size="2" min="0" max="31" class="ivbox"> <input type="number" id="minatk" placeholder="ATK" size="2" min="0" max="31" class="ivbox"> <input type="number" id="mindef" placeholder="DEF" size="2" min="0" max="31" class="ivbox"><input type="number" id="minspa" placeholder="SpA" size="2" min="0" max="31" class="ivbox"> <input type="number" id="minspd" placeholder="SpD" size="2" min="0" max="31" class="ivbox"> <input type="number" id="minspe" placeholder="Spe" size="2" min="0" max="31" class="ivbox">
 			</div>
 
 			<label>Max IVs:</label>
 			<div class="pla-control-spaced">
-				<input type="number" id="maxhp" placeholder="HP" size="2" min="0" max="31"> <input type="number" id="maxatk" placeholder="ATK" size="2" min="0" max="31"> <input type="number" id="maxdef" placeholder="DEF" size="2" min="0" max="31"><input type="number" id="maxspa" placeholder="SpA" size="2" min="0" max="31"> <input type="number" id="maxspd" placeholder="SpD" size="2" min="0" max="31"> <input type="number" id="maxspe" placeholder="Spe" size="2" min="0" max="31">
+				<input type="number" id="maxhp" placeholder="HP" size="2" min="0" max="31" class="ivbox"> <input type="number" id="maxatk" placeholder="ATK" size="2" min="0" max="31" class="ivbox"> <input type="number" id="maxdef" placeholder="DEF" size="2" min="0" max="31" class="ivbox"><input type="number" id="maxspa" placeholder="SpA" size="2" min="0" max="31" class="ivbox"> <input type="number" id="maxspd" placeholder="SpD" size="2" min="0" max="31" class="ivbox"> <input type="number" id="maxspe" placeholder="Spe" size="2" min="0" max="31" class="ivbox">
 			</div>
 			
 			</div>
@@ -156,7 +156,7 @@
 		<div class="pla-control">
 			<label for="genderratio">Gender Ratio</label>
 			<select id="genderratio">
-				<option value="31">1 &#9792; : 7 &#9794;</option>
+				<option value="31" class="ivbox">1 &#9792; : 7 &#9794;</option>
 				<option value="63">1 &#9792; : 4 &#9794;</option>
 				<option value="127">1 &#9792; : 1 &#9794;</option>
 				<option value="191">3 &#9792; : 1 &#9794;</option>
