added egg moves for brilliant pokemon (the aura, not just generally spectacular pokemon)

--- a/templates/pages/overworld.html
+++ b/templates/pages/overworld.html
@@ -400,7 +400,8 @@
 			
 			<ul class="pla-results-ul">
                 <li><span class="pla-results-label">Ability:</span> <span data-pla-results-ability></span></li>
-            </ul>
+				<li><span class="pla-results-label">Egg Move:</span> <span data-pla-results-egg></span></li>
+			</ul>
 
             <ul class="pla-results-ul">
                 <li><span class="pla-results-label">PID:</span> <span data-pla-results-pid></span></li>
