code cleanup. Removed slot filter as it's no longer used.

--- a/templates/pages/rse_wild.html
+++ b/templates/pages/rse_wild.html
@@ -100,13 +100,6 @@
 				<option value=0>Select Location:</option>
 			</select>
 		</div>
-
-        <div class="pla-control">
-			<label for="species">Species:</label>
-			<select id="species">
-				<option value=0>Select Species:</option>
-			</select>
-		</div>
 		
 		<button type="button" class="pla-button expandable-control">Advanced Options</button>
 			<div class="expandable">
@@ -149,6 +142,13 @@
             <input type="checkbox" id="mmoShinyFilter">
         </div>
 
+		<div class="pla-control">
+			<label for="species">Species Filter:</label>
+			<select id="species">
+				<option value=0>Select Species:</option>
+			</select>
+		</div>
+
         <!--<div class="pla-control-spaced">
             <label for="mmoAlphaFilter">Filter Results: Alpha Only</label>
             <input type="checkbox" id="mmoAlphaFilter">
@@ -182,23 +182,6 @@
 				<option value="careful">Careful</option>
 				<option value="quirky">Quirky</option>
 			</select>
-			
-		<label for="slotfilter">Filter Results: Encounter Slot:</label>
-		<select id="slotfilter" multiple class="chosen-select">
-			<option value="any">Any</option>
-			<option value=0>0</option>
-			<option value=1>1</option>
-			<option value=2>2</option>
-			<option value=3>3</option>
-			<option value=4>4</option>
-			<option value=5>5</option>
-			<option value=6>6</option>
-			<option value=7>7</option>
-			<option value=8>8</option>
-			<option value=9>9</option>
-			<option value=10>10</option>
-			<option value=11>11</option>
-		</select>
 		
 		<label for="genderfilter">Filter Results: Gender:</label>
 		<select id="genderfilter">
