added Pressure as lead option

--- a/templates/pages/rse_wild.html
+++ b/templates/pages/rse_wild.html
@@ -72,6 +72,7 @@
 				<option value="None">None</option>
 				<option value="Synch">Synchronize</option>
 				<option value="CuteCharm">Cute Charm</option>
+				<option value="Pressure">Pressure/Hustle/Vital Spirit</option>
 			</select>
 		</div>
 
